# server/docs/swagger.yaml
@@ -221,6 +221,29 @@ paths:
       summary: Activate a new user
       tags:
       - Register
+  /user-ms/v1/customer/oauth-callback:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint allows a new user to register by Zitadel access_token.
+      parameters:
+      - description: Insert your access token with 'Bearer ' prefix
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/data.BaseResponse'
+      summary: Register a new user authed by Zitadel
+      tags:
+      - Register
   /user-ms/v1/customer/users/self:
     get:
       consumes:
